# secure-code-bench

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic.yml
examples/samples/: sql_injection.py
src/secure_code_bench/: __init__.py  acceptance.py  cli.py  env.py  judge.py  kev.py  manifests.py  models.py  prompts.py  providers.py  reporting.py  reporting_html.py  results.py  runner.py  scorers.py  suites.py  validation.py
tests/: test_cli.py  test_env.py  test_judge.py  test_kev.py  test_manifests.py  test_prompts.py  test_providers.py  test_reporting.py  test_reporting_html.py  test_results.py  test_runner.py  test_scorers.py  test_validation.py
