[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secure-code-bench"
version = "0.1.0"
description = "A small Python framework for benchmarking LLMs on code-security prompts."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
report = [
  "plotly==6.6.0",
]

[project.scripts]
secure-code-bench = "secure_code_bench.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
